# camera-gateway

./: README.md  pyproject.toml
src/api/: app.py
src/camera/: Camera.py
tests/: tests.py
